backend/backend.log

> backend@1.0.0 dev
> nodemon src/index.js

[33m[nodemon] 3.1.11[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[32m[nodemon] starting `node src/index.js`[39m
[dotenv@17.2.3] injecting env (0) from .env -- tip: ⚙️  suppress all logs with { quiet: true }
Server running on http://localhost:3000
Fetch Error: PrismaClientInitializationError: 
Invalid `prisma.issue.findMany()` invocation:


Can't reach database server at `aws-1-ap-south-1.pooler.supabase.com`:`6543`

Please make sure your database server is running at `aws-1-ap-south-1.pooler.supabase.com`:`6543`.
    at In.handleRequestError (D:\Community-Driven\backend\node_modules\@prisma\client\runtime\library.js:123:7154)
    at In.handleAndLogRequestError (D:\Community-Driven\backend\node_modules\@prisma\client\runtime\library.js:123:6188)
    at In.request (D:\Community-Driven\backend\node_modules\@prisma\client\runtime\library.js:123:5896)
    at async l (D:\Community-Driven\backend\node_modules\@prisma\client\runtime\library.js:128:10871)
    at async file:///D:/Community-Driven/backend/src/index.js:124:20 {
  clientVersion: '5.10.0',
  errorCode: undefined
}
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node src/index.js`[39m
[dotenv@17.2.3] injecting env (0) from .env -- tip: 🔑 add access controls to secrets: https://dotenvx.com/ops
Server running on http://localhost:3000
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node src/index.js`[39m
[dotenv@17.2.3] injecting env (0) from .env -- tip: 🔐 prevent committing .env to code: https://dotenvx.com/precommit
Server running on http://localhost:3000
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `node src/index.js`[39m
file:///D:/Community-Driven/backend/src/index.js:11
import { authenticateToken } from './middleware/authMiddleware.js';
         ^^^^^^^^^^^^^^^^^

SyntaxError: Identifier 'authenticateToken' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at #translate (node:internal/modules/esm/loader:473:20)
    at afterLoad (node:internal/modules/esm/loader:529:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:534:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:571:36)
    at afterResolve (node:internal/modules/esm/loader:624:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:630:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:649:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v24.13.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
